<resources>
    <string name="app_name">Etkinlik Yogunluğu Haritası</string>
    <string name="title_activity_maps">Map</string>
    <string name="haritayi_ac">Haritayı aç</string>
    <string name="rota_olustur">Rota oluştur</string>
    <string name="isim">İsim</string>
    <string name="kategori">Kategori</string>
    <string name="tarih">Tarih</string>
    <string name="adres">Adres</string>
    <string name="mekan_ismi">Mekan ismi</string>
    <string name="link">Link</string>

    <string-array name="dates">
        <item>Bugün</item>
        <item>Yarın</item>
        <item>Bu Haftasonu</item>
        <item>Başka bir tarih</item>
    </string-array>
    <string-array name="cities">
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyon</item>
        <item>Ağrı</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Ankara/Çankaya</item>
        <item>Antalya</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkari</item>
        <item>Isparta</item>
        <item>Mersin</item>
        <item>İstanbul</item>
        <item>İstanbul/Beşiktaş</item>
        <item>İstanbul/Beyoğlu</item>
        <item>İstanbul/Kadıköy</item>
        <item>İzmir</item>
        <item>İzmir/Bornova</item>
        <item>İzmir/Çeşme</item>
        <item>İzmir/Konak</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Kahramanmaraş</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Sinop</item>
        <item>Siirt</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
        <item>Aksaray</item>
        <item>Bayburt</item>
        <item>Karaman</item>
        <item>Kırıkkale</item>
        <item>Batman</item>
        <item>Şırnak</item>
        <item>Bartın</item>
        <item>Ardahan</item>
        <item>Iğdır</item>
        <item>Yalova</item>
        <item>Karabük</item>
        <item>Kilis</item>
        <item>Osmaniye</item>
        <item>Düzce</item>
    </string-array>
    <string-array name="categories">
        <item>Hepsi</item>
        <item>Müzik</item>
        <item>Sanat</item>
        <item>Spor</item>
        <item>Diğer</item>
    </string-array>
</resources>
