<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="315dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/e_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/isim"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/e_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/kategori"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/e_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/tarih"
                android:textStyle="italic"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/e_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/adres"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/e_place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/mekan_ismi"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/e_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/link"
                android:textSize="18sp"
                android:autoLink="web"
                android:textColorLink="#0000c4"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/colorAccent"
                app:srcCompat="@drawable/ic_directions_black_24dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="360dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:text="Yol tarifi almak için üstteki simgeye tıklayın"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>